# culture

./: .env.example  1.txt  Dockerfile.ai_chat  Dockerfile.chinese-national-culture-museum  Dockerfile.chinese-national-culture-museum-backend  Dockerfile.chinese-national-culture-museum-frontend  Dockerfile.index  README.md  docker-compose.yml
ai_chat/: .env.example  .env.swp  README.md  pyproject.toml  start.sh
ai_chat/app/: __init__.py  config.py  llm.py  main.py  models.py  prompts.py  translation.py
ai_chat/static/: font_test.html  index.html
ai_chat/tests/: test_translation.py
chinese-national-culture-museum/: cultural_museum.sql
chinese-national-culture-museum/backend/: pom.xml
chinese-national-culture-museum/backend/community-service/: pom.xml
chinese-national-culture-museum/frontend/: index.html  package-lock.json  package.json  test.html  vite.config.js
chinese-national-culture-museum/frontend/src/: App.vue
index/: README.md  api.py  ethnic_groups.json  index.html  script.js  start.sh  styles.css  styles.scss  video_data.json
index/data/: culturedata.json  database_export.json  ethnic_groups.json
index/data_mz/: ethnic_groups_data.json
index/data_mz/achang/: 历史沿革.txt  发展状况.txt  基本信息.txt  风俗习惯.txt
index/data_mz/bai/: 历史沿革.txt  发展状况.txt  基本信息.txt  风俗习惯.txt
index/data_mz/blang/: 历史沿革.txt  发展状况.txt  基本信息.txt  风俗习惯.txt
index/data_mz/bonan/: 历史沿革.txt  发展状况.txt  基本信息.txt  风俗习惯.txt
index/data_mz/buyi/: 历史沿革.txt  发展状况.txt  基本信息.txt  (+1 more)
index/history/: history.css  history.txt  index.html
index/mz_screen/: admin_gui.py  index.html  server.py
(+323 files in other folders)
